fixed button issue on mobile on results page

--- a/src/Components/Cards/MiniCard.module.css
+++ b/src/Components/Cards/MiniCard.module.css
@@ -250,6 +250,9 @@
     width: 70%;
   }
 
+  .buttoncontainer {
+    scale: 90%;
+  }
 
  
   }
